[package]
name = "mountain-keyboard-daemon"
version = "0.1.0"
edition = "2024"
authors = ["Megan Bowra-Dean"]
repository = "https://github.com/megahbite/mountain-keyboard-daemon"
license = "MIT"
keywords = ["mountain", "everest", "keyboard"]
categories = ["hardware-support"]

[dependencies]
chrono = "0.4.42"
nusb = { version = "0.2.1", features = ["tokio"] }
tokio = { version = "1.48.0", features = ["full"] }
