[package]
name = "mountain-keyboard-daemon"
version = "0.2.0"
edition = "2024"
authors = ["Megan Bowra-Dean"]
repository = "https://github.com/megahbite/mountain-keyboard-daemon"
license = "MIT"
keywords = ["mountain", "everest", "keyboard"]
categories = ["hardware-support"]

[dependencies]
chrono = "0.4.42"
futures-lite = "2.6.1"
libpulse-binding = { version = "2.30.1", optional = true }
nusb = { version = "0.2.1", features = ["tokio"] }
tokio = { version = "1.48.0", features = ["full"] }

[features]
default = ["pulse"]
pulse = ["dep:libpulse-binding"]
